src/Javalette/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Par.y
-----------------------------------------------------------------------------

state 79 contains 1 shift/reduce conflicts.
state 149 contains 1 shift/reduce conflicts.

rule 44 is unused
rule 45 is unused
rule 46 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg -> Prog                               (0)
	Ident -> L_Ident                                   (1)
	Double -> L_doubl                                  (2)
	Integer -> L_integ                                 (3)
	String -> L_quoted                                 (4)
	Prog -> ListTopDef                                 (5)
	TopDef -> Type Ident '(' ListArg ')' Blk           (6)
	TopDef -> 'typedef' 'struct' Ident '*' Ident ';'   (7)
	TopDef -> 'struct' Ident '{' ListMem '}' ';'       (8)
	ListTopDef -> TopDef                               (9)
	ListTopDef -> TopDef ListTopDef                    (10)
	Arg -> Type Ident                                  (11)
	ListArg ->                                         (12)
	ListArg -> Arg                                     (13)
	ListArg -> Arg ',' ListArg                         (14)
	Mem -> Type Ident ';'                              (15)
	ListMem -> Mem                                     (16)
	ListMem -> Mem ListMem                             (17)
	Blk -> '{' ListStmt '}'                            (18)
	ListStmt ->                                        (19)
	ListStmt -> Stmt ListStmt                          (20)
	Stmt -> ';'                                        (21)
	Stmt -> Blk                                        (22)
	Stmt -> Type ListItem ';'                          (23)
	Stmt -> Expr6 '=' Expr ';'                         (24)
	Stmt -> Ident '++' ';'                             (25)
	Stmt -> Ident '--' ';'                             (26)
	Stmt -> 'return' Expr ';'                          (27)
	Stmt -> 'return' ';'                               (28)
	Stmt -> 'if' '(' Expr ')' Stmt                     (29)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (30)
	Stmt -> 'while' '(' Expr ')' Stmt                  (31)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (32)
	Stmt -> Expr ';'                                   (33)
	Item -> Ident                                      (34)
	Item -> Ident '=' Expr                             (35)
	ListItem -> Item                                   (36)
	ListItem -> Item ',' ListItem                      (37)
	Type -> Type '[]'                                  (38)
	Type -> 'int'                                      (39)
	Type -> 'double'                                   (40)
	Type -> 'boolean'                                  (41)
	Type -> 'void'                                     (42)
	Type -> Ident                                      (43)
	ListType ->                                        (44)
	ListType -> Type                                   (45)
	ListType -> Type ',' ListType                      (46)
	Expr7 -> 'new' NItem                               (47)
	Expr7 -> Expr8                                     (48)
	Expr6 -> Expr6 '[' Expr ']'                        (49)
	Expr6 -> Expr6 '->' Ident                          (50)
	Expr6 -> Expr6 '.' Ident                           (51)
	Expr6 -> Ident                                     (52)
	Expr6 -> Integer                                   (53)
	Expr6 -> Double                                    (54)
	Expr6 -> 'true'                                    (55)
	Expr6 -> 'false'                                   (56)
	Expr6 -> Ident '(' ListExpr ')'                    (57)
	Expr6 -> String                                    (58)
	Expr6 -> Expr7                                     (59)
	Expr5 -> '-' Expr5                                 (60)
	Expr5 -> '!' Expr5                                 (61)
	Expr5 -> Expr6                                     (62)
	Expr4 -> Expr4 MulOp Expr5                         (63)
	Expr4 -> Expr5                                     (64)
	Expr3 -> Expr3 AddOp Expr4                         (65)
	Expr3 -> Expr4                                     (66)
	Expr2 -> Expr2 RelOp Expr3                         (67)
	Expr2 -> Expr3                                     (68)
	Expr1 -> Expr2 '&&' Expr1                          (69)
	Expr1 -> Expr2                                     (70)
	Expr -> Expr1 '||' Expr                            (71)
	Expr -> Expr1                                      (72)
	Expr8 -> Expr9                                     (73)
	Expr9 -> '(' Expr ')'                              (74)
	ListExpr ->                                        (75)
	ListExpr -> Expr                                   (76)
	ListExpr -> Expr ',' ListExpr                      (77)
	NItem -> Type '[' Expr ']'                         (78)
	NItem -> Type                                      (79)
	AddOp -> '+'                                       (80)
	AddOp -> '-'                                       (81)
	MulOp -> '*'                                       (82)
	MulOp -> '/'                                       (83)
	MulOp -> '%'                                       (84)
	RelOp -> '<'                                       (85)
	RelOp -> '<='                                      (86)
	RelOp -> '>'                                       (87)
	RelOp -> '>='                                      (88)
	RelOp -> '=='                                      (89)
	RelOp -> '!='                                      (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	':'            { PT _ (TS _ 16) }
	';'            { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	'[]'           { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'boolean'      { PT _ (TS _ 27) }
	'double'       { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'struct'       { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'typedef'      { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg    rule  0
	Ident           rule  1
	Double          rule  2
	Integer         rule  3
	String          rule  4
	Prog            rule  5
	TopDef          rules 6, 7, 8
	ListTopDef      rules 9, 10
	Arg             rule  11
	ListArg         rules 12, 13, 14
	Mem             rule  15
	ListMem         rules 16, 17
	Blk             rule  18
	ListStmt        rules 19, 20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	Item            rules 34, 35
	ListItem        rules 36, 37
	Type            rules 38, 39, 40, 41, 42, 43
	ListType        rules 44, 45, 46
	Expr7           rules 47, 48
	Expr6           rules 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59
	Expr5           rules 60, 61, 62
	Expr4           rules 63, 64
	Expr3           rules 65, 66
	Expr2           rules 67, 68
	Expr1           rules 69, 70
	Expr            rules 71, 72
	Expr8           rule  73
	Expr9           rule  74
	ListExpr        rules 75, 76, 77
	NItem           rules 78, 79
	AddOp           rules 80, 81
	MulOp           rules 82, 83, 84
	RelOp           rules 85, 86, 87, 88, 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProg -> . Prog                              (rule 0)

	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'int'          shift, and enter state 10
	'struct'       shift, and enter state 11
	'typedef'      shift, and enter state 12
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Prog           goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'->'           reduce using rule 43
	'.'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43
	L_Ident        reduce using rule 43


State 4

	%start_pProg -> Prog .                              (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 9)
	ListTopDef -> TopDef . ListTopDef                   (rule 10)

	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'int'          shift, and enter state 10
	'struct'       shift, and enter state 11
	'typedef'      shift, and enter state 12
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 9

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 18
	Type           goto state 7

State 6

	Prog -> ListTopDef .                                (rule 5)

	%eof           reduce using rule 5


State 7

	TopDef -> Type . Ident '(' ListArg ')' Blk          (rule 6)
	Type -> Type . '[]'                                 (rule 38)

	'[]'           shift, and enter state 17
	L_Ident        shift, and enter state 2

	Ident          goto state 16

State 8

	Type -> 'boolean' .                                 (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'->'           reduce using rule 41
	'.'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_Ident        reduce using rule 41


State 9

	Type -> 'double' .                                  (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'->'           reduce using rule 40
	'.'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           reduce using rule 40
	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_Ident        reduce using rule 40


State 10

	Type -> 'int' .                                     (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'->'           reduce using rule 39
	'.'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'='            reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            reduce using rule 39
	'[]'           reduce using rule 39
	']'            reduce using rule 39
	'||'           reduce using rule 39
	L_Ident        reduce using rule 39


State 11

	TopDef -> 'struct' . Ident '{' ListMem '}' ';'      (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 12

	TopDef -> 'typedef' . 'struct' Ident '*' Ident ';'    (rule 7)

	'struct'       shift, and enter state 14


State 13

	Type -> 'void' .                                    (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'->'           reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_Ident        reduce using rule 42


State 14

	TopDef -> 'typedef' 'struct' . Ident '*' Ident ';'    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 21

State 15

	TopDef -> 'struct' Ident . '{' ListMem '}' ';'      (rule 8)

	'{'            shift, and enter state 20


State 16

	TopDef -> Type Ident . '(' ListArg ')' Blk          (rule 6)

	'('            shift, and enter state 19


State 17

	Type -> Type '[]' .                                 (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'->'           reduce using rule 38
	'.'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'='            reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'['            reduce using rule 38
	'[]'           reduce using rule 38
	']'            reduce using rule 38
	'||'           reduce using rule 38
	L_Ident        reduce using rule 38


State 18

	ListTopDef -> TopDef ListTopDef .                   (rule 10)

	%eof           reduce using rule 10


State 19

	TopDef -> Type Ident '(' . ListArg ')' Blk          (rule 6)

	')'            reduce using rule 12
	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'int'          shift, and enter state 10
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 27
	Type           goto state 28

State 20

	TopDef -> 'struct' Ident '{' . ListMem '}' ';'      (rule 8)

	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'int'          shift, and enter state 10
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Mem            goto state 23
	ListMem        goto state 24
	Type           goto state 25

State 21

	TopDef -> 'typedef' 'struct' Ident . '*' Ident ';'    (rule 7)

	'*'            shift, and enter state 22


State 22

	TopDef -> 'typedef' 'struct' Ident '*' . Ident ';'    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 35

State 23

	ListMem -> Mem .                                    (rule 16)
	ListMem -> Mem . ListMem                            (rule 17)

	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'int'          shift, and enter state 10
	'void'         shift, and enter state 13
	'}'            reduce using rule 16
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Mem            goto state 23
	ListMem        goto state 34
	Type           goto state 25

State 24

	TopDef -> 'struct' Ident '{' ListMem . '}' ';'      (rule 8)

	'}'            shift, and enter state 33


State 25

	Mem -> Type . Ident ';'                             (rule 15)
	Type -> Type . '[]'                                 (rule 38)

	'[]'           shift, and enter state 17
	L_Ident        shift, and enter state 2

	Ident          goto state 32

State 26

	ListArg -> Arg .                                    (rule 13)
	ListArg -> Arg . ',' ListArg                        (rule 14)

	')'            reduce using rule 13
	','            shift, and enter state 31


State 27

	TopDef -> Type Ident '(' ListArg . ')' Blk          (rule 6)

	')'            shift, and enter state 30


State 28

	Arg -> Type . Ident                                 (rule 11)
	Type -> Type . '[]'                                 (rule 38)

	'[]'           shift, and enter state 17
	L_Ident        shift, and enter state 2

	Ident          goto state 29

State 29

	Arg -> Type Ident .                                 (rule 11)

	')'            reduce using rule 11
	','            reduce using rule 11


State 30

	TopDef -> Type Ident '(' ListArg ')' . Blk          (rule 6)

	'{'            shift, and enter state 41

	Blk            goto state 40

State 31

	ListArg -> Arg ',' . ListArg                        (rule 14)

	')'            reduce using rule 12
	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'int'          shift, and enter state 10
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 26
	ListArg        goto state 39
	Type           goto state 28

State 32

	Mem -> Type Ident . ';'                             (rule 15)

	';'            shift, and enter state 38


State 33

	TopDef -> 'struct' Ident '{' ListMem '}' . ';'      (rule 8)

	';'            shift, and enter state 37


State 34

	ListMem -> Mem ListMem .                            (rule 17)

	'}'            reduce using rule 17


State 35

	TopDef -> 'typedef' 'struct' Ident '*' Ident . ';'    (rule 7)

	';'            shift, and enter state 36


State 36

	TopDef -> 'typedef' 'struct' Ident '*' Ident ';' .    (rule 7)

	'boolean'      reduce using rule 7
	'double'       reduce using rule 7
	'int'          reduce using rule 7
	'struct'       reduce using rule 7
	'typedef'      reduce using rule 7
	'void'         reduce using rule 7
	L_Ident        reduce using rule 7
	%eof           reduce using rule 7


State 37

	TopDef -> 'struct' Ident '{' ListMem '}' ';' .      (rule 8)

	'boolean'      reduce using rule 8
	'double'       reduce using rule 8
	'int'          reduce using rule 8
	'struct'       reduce using rule 8
	'typedef'      reduce using rule 8
	'void'         reduce using rule 8
	L_Ident        reduce using rule 8
	%eof           reduce using rule 8


State 38

	Mem -> Type Ident ';' .                             (rule 15)

	'boolean'      reduce using rule 15
	'double'       reduce using rule 15
	'int'          reduce using rule 15
	'void'         reduce using rule 15
	'}'            reduce using rule 15
	L_Ident        reduce using rule 15


State 39

	ListArg -> Arg ',' ListArg .                        (rule 14)

	')'            reduce using rule 14


State 40

	TopDef -> Type Ident '(' ListArg ')' Blk .          (rule 6)

	'boolean'      reduce using rule 6
	'double'       reduce using rule 6
	'int'          reduce using rule 6
	'struct'       reduce using rule 6
	'typedef'      reduce using rule 6
	'void'         reduce using rule 6
	L_Ident        reduce using rule 6
	%eof           reduce using rule 6


State 41

	Blk -> '{' . ListStmt '}'                           (rule 18)

	'!'            shift, and enter state 60
	'('            shift, and enter state 61
	'-'            shift, and enter state 62
	';'            shift, and enter state 63
	'boolean'      shift, and enter state 8
	'double'       shift, and enter state 9
	'false'        shift, and enter state 64
	'for'          shift, and enter state 65
	'if'           shift, and enter state 66
	'int'          shift, and enter state 10
	'new'          shift, and enter state 67
	'return'       shift, and enter state 68
	'true'         shift, and enter state 69
	'void'         shift, and enter state 13
	'while'        shift, and enter state 70
	'{'            shift, and enter state 41
	'}'            reduce using rule 19
	L_Ident        shift, and enter state 2
	L_doubl        shift, and enter state 71
	L_integ        shift, and enter state 72
	L_quoted       shift, and enter state 73

	Ident          goto state 42
	Double         goto state 43
	Integer        goto state 44
	String         goto state 45
	Blk            goto state 46
	ListStmt       goto state 47
	Stmt           goto state 48
	Type           goto state 49
	Expr7          goto state 50
	Expr6          goto state 51
	Expr5          goto state 52
	Expr4          goto state 53
	Expr3          goto state 54
	Expr2          goto state 55
	Expr1          goto state 56
	Expr           goto state 57
	Expr8          goto state 58
	Expr9          goto state 59

State 42

	Stmt -> Ident . '++' ';'                            (rule 25)
	Stmt -> Ident . '--' ';'                            (rule 26)
	Type -> Ident .                                     (rule 43)
	Expr6 -> Ident .                                    (rule 52)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 57)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	'('            shift, and enter state 112
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	'++'           shift, and enter state 113
	'-'            reduce using rule 52
	'--'           shift, and enter state 114
	'->'           reduce using rule 52
	'.'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'='            reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'['            reduce using rule 52
	'[]'           reduce using rule 43
	'||'           reduce using rule 52
	L_Ident        reduce using rule 43


State 43

	Expr6 -> Double .                                   (rule 54)
